Pagination to 3 and some minor changes

--- a/404.md
+++ b/404.md
@@ -7,5 +7,5 @@ description: "Page not found. Your pixels are in another canvas."
 
 <div class="text-center">
 	<h1>Yeah, I mean it.</h1>
-	<p>Well, Nothing to see here anymore. Move along back to <a href='/'>Home</a></p>
+	<p>Well, Nothing to see here. Get back to <a href='/'>Home</a></p>
 </div>
